fixed issue with full screen nav not scrolling on smaller mobiles

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -80,6 +80,7 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
+    overflow-y:scroll;
     z-index: 2;
     display: none;
     color: #ffffff;
